tests/NormalTests/paczka1/fuzzy1/35105588.err
Error in line 1: CJiymWIkAo S537 62,3
Error in line 4: tL6qnEdw9 S401 36,4
Error in line 16: 8qKCS89185,6
Error in line 14: tL6qnEdw9 S891 181,1
Error in line 29: g2IRDI A177 61,2
